--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "itc230 homework projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint **/*.js",
+    "test": "mocha test/**"
   },
   "repository": {
     "type": "git",
@@ -26,4 +28,6 @@
     "eslint": "^6.8.0",
     "mocha": "^7.1.2"
   }
+
+  
 }
